Fix wide <pre> overflow on mobile

--- a/resources/main.css
+++ b/resources/main.css
@@ -66,6 +66,10 @@ noscript {
   font-weight: bold;
 }
 
+pre {
+  overflow-x: auto;
+}
+
 table {
   background-color: white;
   border-spacing: 0;
